--- a/WorkingTimeSettlement/WorkingTimeSettlement/Views/MainPage.xaml
+++ b/WorkingTimeSettlement/WorkingTimeSettlement/Views/MainPage.xaml
@@ -4,25 +4,24 @@
             xmlns:views="clr-namespace:WorkingTimeSettlement.Views"
             x:Class="WorkingTimeSettlement.Views.MainPage">
     <TabbedPage.Children>
-        <NavigationPage Title="Browse">
-            <NavigationPage.Icon>
-                <OnPlatform x:TypeArguments="FileImageSource">
-                    <On Platform="iOS" Value="tab_feed.png"/>
-                </OnPlatform>
-            </NavigationPage.Icon>
-            <x:Arguments>
-                <views:ItemsPage />
-            </x:Arguments>
-        </NavigationPage>
-        
-        <NavigationPage Title="About">
+        <NavigationPage Title="Today">
             <NavigationPage.Icon>
                 <OnPlatform x:TypeArguments="FileImageSource">
                     <On Platform="iOS" Value="tab_about.png"/>
                 </OnPlatform>
             </NavigationPage.Icon>
             <x:Arguments>
-                <views:AboutPage />
+                <views:TodayView />
+            </x:Arguments>
+        </NavigationPage>
+        <NavigationPage Title="All Days">
+            <NavigationPage.Icon>
+                <OnPlatform x:TypeArguments="FileImageSource">
+                    <On Platform="iOS" Value="tab_about.png"/>
+                </OnPlatform>
+            </NavigationPage.Icon>
+            <x:Arguments>
+                <views:AllDaysView />
             </x:Arguments>
         </NavigationPage>
     </TabbedPage.Children>
