--- a/WorkingTimeSettlement/WorkingTimeSettlement/Views/MainPage.xaml
+++ b/WorkingTimeSettlement/WorkingTimeSettlement/Views/MainPage.xaml
@@ -14,6 +14,16 @@
                 <views:TodayView />
             </x:Arguments>
         </NavigationPage>
+        <NavigationPage Title="Other Day">
+            <NavigationPage.Icon>
+                <OnPlatform x:TypeArguments="FileImageSource">
+                    <On Platform="iOS" Value="tab_about.png"/>
+                </OnPlatform>
+            </NavigationPage.Icon>
+            <x:Arguments>
+                <views:AddOtherDayView />
+            </x:Arguments>
+        </NavigationPage>
         <NavigationPage Title="All Days">
             <NavigationPage.Icon>
                 <OnPlatform x:TypeArguments="FileImageSource">
