--- a/WorkingTimeSettlement/WorkingTimeSettlement/Views/AddOtherDayView.xaml
+++ b/WorkingTimeSettlement/WorkingTimeSettlement/Views/AddOtherDayView.xaml
@@ -8,17 +8,17 @@
             <DatePicker MinimumDate="{Binding MinimalDate}" MaximumDate="{Binding MaximalDate}" Date="{Binding SelectedDate}"/>
             <StackLayout Orientation="Horizontal">
                 <Label Text="Start Time"/>
-                <Entry x:Name="StartTimeEntry"/>
+                <Entry x:Name="StartTimeEntry" Text="{Binding WorkStart}"/>
             </StackLayout>
             <StackLayout Orientation="Horizontal">
                 <Label Text="Ends Time"/>
-                <Entry x:Name="EndTimeEntry"/>
+                <Entry x:Name="EndTimeEntry" Text="{Binding WorkEnd}"/>
                 <Label Text="Break )"/>
-                <Entry x:Name="BreakTimeEntry"/>
+                <Entry x:Name="BreakTimeEntry" Text="{Binding BreakAtWork}"/>
             </StackLayout>
             <Label Text="Description tasks"/>
-            <Editor x:Name="EditorDescription" HeightRequest="60"/>
-            <Button x:Name="SaveDay" Clicked="SaveDay_OnClicked" Text="Save" FontSize="14" />
+            <Editor x:Name="EditorDescription" HeightRequest="60" Text="{Binding Description}"/>
+            <Button x:Name="SaveDay" Clicked="SaveDay_OnClicked" Text="Save" FontSize="14"  />
             <Label Text="Use Template {Hours:Minutes} for fill time" VerticalOptions="EndAndExpand" FontSize="10" FontAttributes="Bold"/>
         </StackLayout>
     </ContentPage.Content>
